--- a/resource/css/style.css
+++ b/resource/css/style.css
@@ -1,61 +1,96 @@
-*{
-    margin: 0;
-    padding: 0;
+@import url(fuentes.css);
+@import url(App.css);
+
+* {
+	margin: 0;
+	padding: 0;
+	transition: 0.2s;
+	font-family: fira code, Menlo, Courier;
+	text-overflow: clip;
 }
 
-@font-face {
-    font-family: font-text-01;
-    src: url(/resource/fonts/bebas-neue.woff);
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	font-weight: 400;
+	text-transform: uppercase;
 }
 
-:root{
-    --padding-navbar : 10px;
-    --li-margin-navbar-inline : 20px;
-    --li-margin-navbar-block : 10px;
-    --li-padding-inline: 10px;
-    --li-padding-block:10px;
+:root {
+	--padding-navbar: 10px;
+	--li-margin-navbar-inline: 20px;
+	--li-margin-navbar-block: 10px;
+	--li-padding-inline: 10px;
+	--li-padding-block: 10px;
+	--color-shadow-navbar-text: rgb(0, 170, 255);
 }
 
-body{
-    background: #1c1c1c;
+body {
+	background: #1c1c1c;
+	line-height: 26px;
+	color: rgb(255, 255, 255);
 }
 
-nav {
-    margin: 10px;
-    box-shadow:  6px 6px 4px 0px #4c4c4c;
-    background-color: #20262c;
-    padding-block-start: var(--padding-navbar);
-    padding-block-end: var(--padding-navbar);
-    position: sticky;
-    position: -webkit-sticky;
-    border-radius: 10px;
+/*
+////////////////////////////////////////////////////////////////////////////////
+/////estilos para la barra de navegacion de la pagina web
+////////////////////////////////////////////////////////////////////////////////
+*/
+
+header {
+	margin: 10px;
+	box-shadow: 6px 6px 4px 0px #189257;
+	background-color: #20262c;
+	padding: 10px 0px;
+	position: -webkit-sticky;
+	border-radius: 10px;
+	z-index: 4;
+	position: sticky;
+	top: 0;
 }
 
-ul{
-    margin-inline-start: 30px;
+header:hover {
+	transform: scale(0.99);
+	transition: color 0.2s ease-in, box-shadow 0.2s ease-in, -webkit-box-shadow 0.2s ease-in;
+	box-shadow: 0px 0px 4px 0px #189257;
 }
 
-nav ul a{
-    list-style: none;
-    text-decoration: none;
-    color :aliceblue;
-    display: inline-block;
-    margin-inline-start: 1px;
-    padding-inline-start: var(--li-padding-inline);
-    padding-block-start: var(--li-padding-block);
-    padding-inline-end: var(--li-padding-inline);
-    padding-block-end: var(--li-padding-block);
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 2em;
-    border: 10px;
-    border-color: aliceblue;
-    border-width: 10px;
+header > div > .name-page {
+	margin: 10px 40px;
+	display: inline-block;
 }
-nav ul a li{
-    margin-inline-start: var(--li-margin-navbar-inline);
-    margin-block-start: var(--li-margin-navbar-block);
-    margin-block-end: var(--li-margin-navbar-block);
-    font-family: font-text-01;
-    text-shadow: 5px 2px 1px red;
+
+header > div > nav#navbar {
+	display: inline-block;
 }
+
+header > div > nav > ul > a {
+	list-style: none;
+	text-decoration: none;
+	color: rgb(3, 185, 0);
+	display: inline-block;
+	margin: 0px 5px;
+	padding: 10px;
+	font-size: 1.5em;
+	border: 10px;
+	border-color: aliceblue;
+	border-width: 10px;
+}
+header > div > nav > ul > a > li {
+	margin: 0px 5px;
+	font-weight: 500;
+}
+
+header > div > nav > ul > a > li:hover {
+	border-bottom: solid 1px;
+}
+
+/*
+////////////////////////////////////////////////////////////////////////////////
+/////Estilos para la pagina principal llamado inicio
+////////////////////////////////////////////////////////////////////////////////
+*/
 
