--- a/resource/css/style.css
+++ b/resource/css/style.css
@@ -155,7 +155,13 @@ main>div>div>img#img-logo{
 
 /*
 ////////////////////////////////////////////////////////////////////////////////
-/////estilos para el archivo footer
+/////estilos para el archivo Codigos.html
+////////////////////////////////////////////////////////////////////////////////
+*/
+
+/*
+////////////////////////////////////////////////////////////////////////////////
+/////estilos para el archivo footer.php
 ////////////////////////////////////////////////////////////////////////////////
 */
 
